[package]
name = "dbt-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "*"
pest_derive = "*"
walkdir = "*"
pyo3 = {version = "*", features = ["auto-initialize"]}
serde_json = "*"
tokio = { version = "*", features = ["full"] }
tower-lsp = "*"
serde = { version = "*", features = ["derive"] }
ropey = "*"
reqwest = "*"
tl = "*"
futures = "*"